Fixed footer gap

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -24,7 +24,7 @@
   width: 100%;
   display: grid;
   place-items: center;
-  gap: 30px;
+  row-gap: 30px;
   text-align: center;
 
   a {
