--- a/scss/style.scss
+++ b/scss/style.scss
@@ -266,7 +266,7 @@
     width: 40%;
     display: grid;
     place-items: center;
-    gap: 30px;
+    row-gap: 30px;
 
     img {
       width: 100%;
